update use notes

--- a/QC_loco_phenotypes.ipynb
+++ b/QC_loco_phenotypes.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d76e96a5-6046-4eeb-993f-7d540eb09a4c",
+   "metadata": {},
+   "source": [
+    "purpose: to check the data distributions for the locomotor datasets that were used for meta-analysis. Done primarily at Abe's recommendation to see if it's impacting the ratXcan (if not normalized)- they are in fact normalized."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "659f0977-027d-4fc1-8b70-d29b04b4d4a7",
@@ -19,10 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#copied from the ratxcan notebook- not all the info here is actually necessary\n",
     "PRE = \"/tscc/projects/ps-palmer/brittany/rat_genomics_paper_pipeline_2024\"\n",
     "OUTPUT = PRE+\"/output\"\n",
     "PREDICT_PREF=\"loco_meta_7k\"\n",
-    "MODEL_TISSUE=\"IL\"\n",
     "PREDICTION=OUTPUT+\"/{MODEL_TISSUE}-filtered-{PREDICT_PREF}_predict.txt\"\n",
     "PHENOTYPES=PRE+\"/data/phenotype/combined_loco_trait_7k_sorted.fam\"\n",
     "TRAIT=\"locomotor_activity\"\n",
@@ -707,9 +715,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
