--- a/analyze_LDSC_vs_GCTA.ipynb
+++ b/analyze_LDSC_vs_GCTA.ipynb
@@ -5,7 +5,7 @@
    "id": "226bdc87-3253-453f-b101-0ce7d28c7d5e",
    "metadata": {},
    "source": [
-    "purpose: to compare the genetic correlations and heritability calculated by LDSC bs GCTA"
+    "purpose: to compare the genetic correlations and heritability calculated by LDSC bs GCTA. LDSC is used for genomicSEM, however, the results were... questionable so this notebook was for checking how they compared to GCTA."
    ]
   },
   {
