--- a/analyze_magma_output_allrat_vs_nicsarat.ipynb
+++ b/analyze_magma_output_allrat_vs_nicsarat.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bda0fb40-96a5-450c-ba31-7766cda749e6",
+   "metadata": {},
+   "source": [
+    "purpose: check how the if using all of the round 10.2 rats as the reference population for MAGMA vs using just the rats from the NICSA study substantially changes the results. All rats is ~10.2k, so it took 6x as long."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c837244e-976b-4950-8aba-60fac7d09b19",
    "metadata": {},
    "source": [
@@ -1376,9 +1384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1390,7 +1398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
