--- a/common_factor.ipynb
+++ b/common_factor.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f97f8579-c93b-48fa-b056-5299b7767d88",
+   "metadata": {},
+   "source": [
+    "purpose: run common factor analysis on NICSA traits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "810af135-a45c-40aa-a73e-90b23faa539d",
