--- a/format_PCA_forgwas.ipynb
+++ b/format_PCA_forgwas.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "857be68a-58d2-4c10-ba27-64ea0170a258",
+   "metadata": {},
+   "source": [
+    "purpose: format the datasets from the first run of PCA analysis on Hao Chen's recomended parellels for smokinit and cigarettes per day into datasets of phenotypes and genotypes for running GWAS using Thiago's pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "45e7a3c2-ab9e-4c01-8dc0-c6ce5472428c",
@@ -1639,9 +1647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1653,7 +1661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
