--- a/gen_sumstats.ipynb
+++ b/gen_sumstats.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b0274fd9-d09c-4d0f-badc-b538a0a5d6f9",
+   "metadata": {},
+   "source": [
+    "purpose: in order to run a multivariate GWAS using genomicSEM, the SNPs, and corresponding SNP effects, need to be coded across phenotypes so that the same allele is the reference allele in all cases. This notebook is for this purpose"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fbfa856e-8545-4c7a-b2a4-305bbda19007",
