--- a/ldsc.ipynb
+++ b/ldsc.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4045ec50-452d-45fa-a178-d13374e4e21d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "purpose: run LCSC on NICSA traits recommended by Hao Chen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72e0a288-2085-47f9-b026-c8d8f829a93d",
    "metadata": {},
    "outputs": [],
