--- a/loco_network_colocalization.ipynb
+++ b/loco_network_colocalization.ipynb
@@ -5,7 +5,7 @@
    "id": "cba24ec2-a9a6-49ca-89a8-d6ebee04e637",
    "metadata": {},
    "source": [
-    "purpose: generate network colocalization values for Locomotor network and compare NPS scores"
+    "purpose: generate network colocalization values for Locomotor-Externalizing network and compare NPS scores"
    ]
   },
   {
@@ -1804,9 +1804,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1818,7 +1818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
