--- a/loco_network_single_species_specific.ipynb
+++ b/loco_network_single_species_specific.ipynb
@@ -5,7 +5,7 @@
    "id": "72712048-273e-4a08-a4e4-7a05d94ea9ca",
    "metadata": {},
    "source": [
-    "purpose: identify rat and human only networks and compare to sarah's combined approach"
+    "purpose: identify rat and human only subnetworks networks for the loco-ext network and compare to the BMI paper's combined species-enriched approach."
    ]
   },
   {
@@ -1357,9 +1357,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1371,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
