--- a/munge_sumstats.ipynb
+++ b/munge_sumstats.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2644fa17-7145-46c2-8938-73f7a7096263",
+   "metadata": {},
+   "source": [
+    "purpose: purpose: standardize format of NISCA sumstats for running LDSC on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7d4b501a-873d-46ea-9b80-b8b6a2c968ee",
