--- a/run_snpeff.ipynb
+++ b/run_snpeff.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "81ad17f6-a1a5-46e0-9673-f5356cb2604f",
+   "metadata": {},
+   "source": [
+    "purpose: run SNPEff on rat datasets, PC1 cigday, smkinit, and locomotor meta-analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9269fbff-4524-461f-a44f-2925b0a4109e",
+   "metadata": {},
+   "source": [
+    "# set-up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "53bea2be-0985-4f3f-9e86-5acab1d8a466",
@@ -99,7 +115,7 @@
    "id": "4eb0735e-9070-4b87-9940-1768f0dfa377",
    "metadata": {},
    "source": [
-    "# run snpeff"
+    "# run snpeff- BASH"
    ]
   },
   {
@@ -182,7 +198,7 @@
    "source": [
     "Files=[snpeff_path+'regressedlr_cigday_pc1.ann.vcf', \n",
     "       snpeff_path+'regressedlr_smkinit_pc1.ann.vcf',\n",
-    "      ]\n"
+    "      ]"
    ]
   },
   {
@@ -805,9 +821,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -819,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
