--- a/validation_loco_ext.ipynb
+++ b/validation_loco_ext.ipynb
@@ -5,7 +5,7 @@
    "id": "90cb21b8-e867-4549-8384-d2dde094e41e",
    "metadata": {},
    "source": [
-    "purpose: identify validation datasets for Locomotor-Exploratory integration"
+    "purpose: identify validation datasets for Locomotor-Exploratory integration. for model organisms, use datasets that are in the alliance of genome resources. from GWAS catalog, use EFO terms."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "id": "6008a60c-c7ba-48a6-a3ce-caeee4d17425",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "tags": []
    },
    "source": [
     "## description"
@@ -118,7 +118,8 @@
    "cell_type": "markdown",
    "id": "015ab69f-2c3d-44f5-a2bf-baf6ecea0f2a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "## substance-related disorder"
@@ -1142,7 +1143,8 @@
    "cell_type": "markdown",
    "id": "27da5ad8-5b7e-43e1-8d4b-1e4482b7d3c1",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "## exploration behaviour"
@@ -1975,6 +1977,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3137e37d-0bfe-4df8-8759-1cb89445fa2a",
+   "metadata": {},
+   "source": [
+    "## read in GWAS catalog dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "e63f1320-c525-4325-a945-104628013010",
@@ -2067,7 +2077,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "54ec7403-91ec-4af8-a3ec-2f5c12854298",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2531,7 +2544,10 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "f5357a5d-61c3-4961-af44-7fe826636979",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3572,9 +3588,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3586,7 +3602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
