--- a/ldsc_addchrtoSNP.ipynb
+++ b/ldsc_addchrtoSNP.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1b9c4e49-34b9-436c-860d-6427efd19819",
+   "metadata": {},
+   "source": [
+    "purpose: to append \"chr\" to the SNP column for all the LD score files. The r markdown also formats the ld score file names to be able to work with ldsc(). They must be named by the chromosome number only."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6620a8ff-0661-4a80-8c43-51a8c03587b6",
@@ -615,9 +623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -629,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
