--- a/loco_network_prop-sampling.ipynb
+++ b/loco_network_prop-sampling.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "85ecb814-fb6b-4768-beb3-41c0f4f8fe30",
+   "metadata": {},
+   "source": [
+    "purpose: run network propagation for externalizing using the 500 gene subsampling that we used for BMI. It is computationally intensive."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
@@ -376,9 +384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -390,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
