--- a/loco_network_prop.ipynb
+++ b/loco_network_prop.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9a272776-2b4c-41df-b694-7629ed264fa1",
+   "metadata": {},
+   "source": [
+    "purpose: run network propagation for a given dataset, in this case used for locomotor activity and externalizing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
@@ -554,9 +562,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -568,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
