--- a/makeref.ipynb
+++ b/makeref.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "65c78851-2905-4f8f-8230-4fecb67ebea9",
+   "metadata": {},
+   "source": [
+    "purpose: make the reference file was from one of the .mlma files using the  for munging. used in the NICSA genomic SEM pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "1599e08b-a1a4-426b-ad93-a8cbfa2efacb",
@@ -647,9 +655,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -661,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
