--- a/loco_network_prop-sampling.ipynb
+++ b/loco_network_prop-sampling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "78703c20-19b8-4619-8ffd-52d265b7a9d8",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,13 @@
     "from netcoloc import netprop\n",
     "from netcoloc import network_colocalization\n",
     "import sys\n",
-    "import random"
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "58efd9dd-898e-4d00-90d6-59e5af05da50",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b04def16-2377-4f94-be32-e92e66b0dc33",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5f541903-81d7-42a5-8387-85a2f0aac129",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6b5aa207-0f4e-4030-8881-81abcb527391",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5784e661-4360-43e3-bfb3-014f7ab7b2a5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2c6129d4-32fa-4954-80fe-5dcf55b0e753",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ed70953c-8e95-439b-aa8e-261d75e1ed21",
    "metadata": {},
    "outputs": [],
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1eed56ce-25f1-4ca4-a3bf-bda7a5f6d86b",
    "metadata": {},
    "outputs": [],
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "41444419-4fba-4786-b74e-278d97cf9279",
    "metadata": {},
    "outputs": [],
@@ -251,6 +252,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8fccd99b-fd03-4096-8616-03e4aeab81a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_consensus_z_scores(sampled_results, percentile=.75):\n",
+    "    \"\"\"returns the consensus z score for each gene across all samples\n",
+    "\n",
+    "    Args:\n",
+    "        sampled_results (str, :py:class:`pandas.DataFrame`):  output of netprop_zscore.calculate_heat_zscores_with_sampling. Can be a file path pointing to these results or a dataframe of the results\n",
+    "        percentile (float, optional): Percentile cut off for determining consensus score. Defaults to .75.\n",
+    "\n",
+    "    Returns:\n",
+    "        :py:class:`pandas.DataFrame`: Consensus z-scores for all genes based on sampling\n",
+    "    \"\"\"\n",
+    "    if type(sampled_results) == str:\n",
+    "        results = pd.read_csv(sampled_results, sep=\"\\t\", index_col=0)\n",
+    "    else:\n",
+    "        results = sampled_results\n",
+    "    consensus_z = pd.DataFrame({'z': results.quantile(q=percentile, axis=1)})\n",
+    "    return consensus_z\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f592e945-cccb-41fe-9a6b-0c00ad8031e4",
    "metadata": {},
@@ -272,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "30bb2a69-0c5e-40e2-99a6-ce8705f4d5c2",
    "metadata": {},
    "outputs": [],
@@ -282,17 +308,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "16d7e91b-af6f-4c2f-abdd-9f1c11139d21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCNet2.0\n",
+      "number of nodes:\n",
+      "19267\n",
+      "\n",
+      "number of edges:\n",
+      "3852119\n"
+     ]
+    }
+   ],
    "source": [
     "graph=import_interactome(interactome_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b30e9308-92d7-4980-973e-b3280f13710f",
    "metadata": {},
    "outputs": [],
@@ -302,10 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0ff6358b-83c2-4f7c-8470-a10aeb4a0c35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "calculating w_prime\n",
+      "\n",
+      "calculating w_double_prime\n"
+     ]
+    }
+   ],
    "source": [
     "# pre calculate the matricies used for network propagation\n",
     "print('\\ncalculating w_prime')\n",
@@ -325,17 +375,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d68382ef-b8b2-43b7-a8dc-5631c254bc35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tscc/projects/ps-palmer/brittany/SUD_cross_species'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4c5d0e2e-7c9a-4d01-a2d6-48ccf9e3aa1d",
    "metadata": {},
    "outputs": [],
@@ -351,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2c8d7a15-4705-4c36-acac-520771fd213a",
    "metadata": {},
    "outputs": [],
@@ -377,16 +438,233 @@
     "    individual_heats=w_double_prime,\n",
     "    G_PC=graph,\n",
     "    trait=k,\n",
-    "    outfile='network_scores/'+k+'_'+interactome_name+'_zscore.tsv'\n",
+    "    outfile='network_scores/'+k+'_'+interactome_name+'_sampled_zscore.tsv'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d016a7f-3b92-4782-b99a-45a9f767b6a4",
+   "metadata": {},
+   "source": [
+    "# get consensus from subsampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "30db289b-4e45-46bd-b0c3-30858d5ff6e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_sample=pd.read_csv('network_scores/'+k+'_'+interactome_name+'_sampled_zscore.tsv',sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a2bb16c3-0270-4c34-afcc-4bf097c66872",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1835120/2697710531.py:15: FutureWarning: The default value of numeric_only in DataFrame.quantile is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  consensus_z = pd.DataFrame({'z': results.quantile(q=percentile, axis=1)})\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_bin = get_consensus_z_scores(z_sample, 0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3a7f7aba-aa45-4c70-ac30-7b9f6b9ddf79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.258083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.266998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.230623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.908787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.104979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19262</th>\n",
+       "      <td>0.061126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19263</th>\n",
+       "      <td>-0.091927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19264</th>\n",
+       "      <td>-0.095920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19265</th>\n",
+       "      <td>-0.032786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19266</th>\n",
+       "      <td>0.010737</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19267 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              z\n",
+       "0     -0.258083\n",
+       "1      1.266998\n",
+       "2      0.230623\n",
+       "3      0.908787\n",
+       "4      0.104979\n",
+       "...         ...\n",
+       "19262  0.061126\n",
+       "19263 -0.091927\n",
+       "19264 -0.095920\n",
+       "19265 -0.032786\n",
+       "19266  0.010737\n",
+       "\n",
+       "[19267 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cb1d16e4-35fb-456b-9132-2b1fcfec97f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_bin=z_sample[['Unnamed: 0']].merge(z_bin,left_index=True, right_index=True)\n",
+    "z_bin.columns=[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ad1a3144-2ea0-4da5-bb13-5222c16e555a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_bin.index=z_bin[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2c37cc01-67c3-468c-9dca-63f3f1372ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_bin=z_bin[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "41e1b14c-9e37-482c-b723-58180d17682e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0\n",
+       "TGFBR1           -0.258083\n",
+       "TGFBR2            1.266998\n",
+       "SMAD3             0.230623\n",
+       "TGFB1             0.908787\n",
+       "SMAD2             0.104979\n",
+       "                    ...   \n",
+       "TRBV5-1           0.061126\n",
+       "TRBV19           -0.091927\n",
+       "TRAV12-3         -0.095920\n",
+       "TRAV22           -0.032786\n",
+       "ARMCX5-GPRASP2    0.010737\n",
+       "Name: 1, Length: 19267, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "841a71f9-c9bf-4e4e-ad05-ecfedf99ec22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_bin.to_csv('network_scores/'+k+'_'+interactome_name+'_zscore.tsv',sep='\\t',header=None)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:env-std-py38]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-env-std-py38-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
