--- a/TSEM_tutorial.ipynb
+++ b/TSEM_tutorial.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a4dc7a6d-d503-4850-aa3e-b8fc81f78375",
    "metadata": {
     "scrolled": true
@@ -246,9 +246,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "de9bec09-33ec-47f1-91fb-68fbba17cef0",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -539,6 +537,49 @@
     "\n",
     "##optional command to save the ldsc output in case you want to use it in a later R session. \n",
     "save(gfactor_LDSCoutput, file=\"gfactor_LDSC.RData\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cd0212fd-c9a2-4ffe-8115-2d1b8d1a5fd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R Information\n",
+       "\n",
+       "Help files with alias or concept or title matching ‘ldsc’ using regular\n",
+       "expression matching:\n",
+       "\n",
+       "\n",
+       "GenomicSEM::addSNPs     Combine LDSC and summary statistic output for\n",
+       "                        multivariate GWAS using GenomicSEM\n",
+       "GenomicSEM::ldsc        build a convariance structure using LD score\n",
+       "                        regression in R\n",
+       "  Aliases: ldsc\n",
+       "GenomicSEM::multiSNP    Combine LDSC, summary statistic output, and LD\n",
+       "                        information for models including multiple SNPs\n",
+       "GenomicSEM::s_ldsc      Estimate genetic covariance matrices within\n",
+       "                        functional annotations using multivariable\n",
+       "                        Stratified LD score regression\n",
+       "  Aliases: s_ldsc\n",
+       "GenomicSEM::usermodel   Run user specified model on LDSC output\n",
+       "\n",
+       "\n",
+       "Type '?PKG::FOO' to inspect entries 'PKG::FOO', or 'TYPE?PKG::FOO' for\n",
+       "entries like 'PKG::FOO-TYPE'.\n",
+       "\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "??GenomicSEM::ldsc "
    ]
   },
   {
