--- a/run_magma_rat.ipynb
+++ b/run_magma_rat.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "f9f7c7d5-a24f-4d83-9c2f-e2d936c88aea",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# concat MLMA output from GWAS"
    ]
@@ -200,7 +202,9 @@
   {
    "cell_type": "markdown",
    "id": "2114959e-4820-45b6-84a7-1af47dd1e757",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## define functions"
    ]
@@ -261,9 +265,7 @@
   {
    "cell_type": "markdown",
    "id": "77d8a4be-3cb6-42d7-8e63-cd3ccde81b95",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## import files"
    ]
@@ -2178,12 +2180,11 @@
     "\n",
     "prefix=\"loco_meta\"\n",
     "gene_loc_file=\"rn7.2_annotatedgenes_ncbi/rn7.2_gene_attribute_table_protein_coding_forMAGMA.tsv\"\n",
-    "N=7722 # this is the N phenotyed\n",
+    "N=7722 # this is the N phenotyped\n",
     "rats=\"loco_meta_gwas_geno/genotypes\"\n",
     "suffix=\"\"\n",
-    "\n",
-    "#win=${win_ls[$SLURM_ARRAY_TASK_ID-1]}\n",
     "win=10\n",
+    "\n",
     "/tscc/projects/ps-palmer/brittany/magma_v1/magma --annotate nonhuman window=$win --snp-loc \"${prefix}_pos.tsv\" --gene-loc $gene_loc_file --out $prefix$suffix\"_7k_win\"$win\n",
     "\n",
     "/tscc/projects/ps-palmer/brittany/magma_v1/magma --bfile $rats --pval \"${prefix}_pval.tsv\" N=$N --gene-annot \"${prefix}${suffix}\"_7k_win\"${win}.genes.annot\" --out $prefix$suffix\"_7k_win\"$win\n"
