--- a/run_magma_human.ipynb
+++ b/run_magma_human.ipynb
@@ -30,6 +30,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77390b36-9ec5-4a7d-a7ac-f002ef984b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bash\n",
+    "#run to concat all the files in order for a trait to get a both a ref file and concated mlma files for genomic sem- awk to remove header\n",
+    "cd /tscc/projects/ps-palmer/brittany/SUD_cross_species/nicsa_gwas/results/gwas\n",
+    "if [ ! -d \"mlma_concat\" ]; then\n",
+    "  mkdir mlma_concat\n",
+    "\n",
+    "fi\n",
+    "\n",
+    "prefixes=('regressedlr_smkinit_pc1' 'regressedlr_cigday_pc1')\n",
+    "for p in ${prefixes[@]}; do\n",
+    "    for CHR in {1..20}; do\n",
+    "        # Define the file\n",
+    "        file=${p}_chrgwas${CHR}.mlma\n",
+    "        echo $file\n",
+    "        if [ ${CHR} -eq 1 ];\n",
+    "        then\n",
+    "            cp $file mlma_concat/${p}.mlma\n",
+    "        else\n",
+    "            awk 'FNR>1' $file >> mlma_concat/${p}.mlma\n",
+    "        fi   \n",
+    "    done\n",
+    "done\n",
+    "\n",
+    "# makes files  /tscc/projects/ps-palmer/brittany/SUD_cross_species/nicsa_gwas/results/gwas/mlma_concat/regressedlr_cigday_pc1.mlma\n",
+    "# /tscc/projects/ps-palmer/brittany/SUD_cross_species/nicsa_gwas/results/gwas/mlma_concat/regressedlr_cigday_pc1.mlma"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8682eeee-66cc-4c0d-8ae0-45feb228655d",
    "metadata": {},
