--- a/analyze_magma_output_allrat_vs_nicsarat.ipynb
+++ b/analyze_magma_output_allrat_vs_nicsarat.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "d3854332-acb1-4c55-8c30-6d43ffb6e579",
    "metadata": {},
    "outputs": [],
@@ -35,9 +35,21 @@
    "execution_count": 2,
    "id": "5468eecd-f51d-485c-99e2-3b6b005b577e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../nicsa_magma/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../nicsa_magma/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../nicsa_magma/'"
+     ]
+    }
+   ],
    "source": [
-    "os.chdir('../nicsa_magma/')"
+    "os.chdir('../magma/')"
    ]
   },
   {
@@ -1384,9 +1396,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:env-std-py38]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-env-std-py38-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1398,7 +1410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
