--- a/validation_MGI.ipynb
+++ b/validation_MGI.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b644f9f-0a83-4123-940f-50f2abfdfb2a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d114f8d0-8296-4844-b037-dcff54307cb7",
    "metadata": {},
    "outputs": [],
@@ -60,18 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aca6fd3f-b5d4-4472-b3be-f1a652141715",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NDEx credentials imported from meta file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create a file called environ_ndex_meta.py where you save variables 'ndex_user' and 'ndex_password'\n",
     "#otherwise will prompt you to define those within the notebooks\n",
@@ -145,6 +137,16 @@
    "source": [
     "interactome=import_interactome(UUIDs=UUIDs, interactome_name=interactome_name)\n",
     "all_nodes=list(interactome.nodes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84eb758-3b6d-42c1-a304-ea66cecc8ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_nodes=pd.read_csv()"
    ]
   },
   {
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "22fb8458-c8c3-492f-b3bd-de85206daaa2",
    "metadata": {},
    "outputs": [
@@ -307,6 +309,136 @@
     "    print('calculating genes per trait')\n",
     "    genes_per_trait=count_genes_per_trait(['MP:0000001'],mgi_df,'human_ortholog','MP',id_to_name,name_to_id,graph)\n",
     "    genes_per_trait.to_csv(gpt_path,index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1be8f2af-639d-4170-af66-c9bbd19f255e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trait_name</th>\n",
+       "      <th>ngenes</th>\n",
+       "      <th>trait_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dilated scala media</td>\n",
+       "      <td>5</td>\n",
+       "      <td>MP:0008309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>increased solitary pulmonary neuroendocrine ce...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>MP:0010915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>large femur head</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MP:0030792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>increased thyroid-stimulating hormone level</td>\n",
+       "      <td>24</td>\n",
+       "      <td>MP:0005135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>abnormal visceral yolk sac cavity morphology</td>\n",
+       "      <td>4</td>\n",
+       "      <td>MP:0011201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14240</th>\n",
+       "      <td>abnormal mammary gland physiology</td>\n",
+       "      <td>103</td>\n",
+       "      <td>MP:0001881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14241</th>\n",
+       "      <td>mammary gland alveolar hyperplasia</td>\n",
+       "      <td>7</td>\n",
+       "      <td>MP:0001884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14242</th>\n",
+       "      <td>absent segment of posterior cerebral artery</td>\n",
+       "      <td>25</td>\n",
+       "      <td>MP:0013840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14243</th>\n",
+       "      <td>increased retina hamartoma incidence</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MP:0006183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14244</th>\n",
+       "      <td>decreased glomerular capsule space</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MP:0011500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14245 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              trait_name  ngenes    trait_ID\n",
+       "0                                    dilated scala media       5  MP:0008309\n",
+       "1      increased solitary pulmonary neuroendocrine ce...       4  MP:0010915\n",
+       "2                                       large femur head       1  MP:0030792\n",
+       "3            increased thyroid-stimulating hormone level      24  MP:0005135\n",
+       "4           abnormal visceral yolk sac cavity morphology       4  MP:0011201\n",
+       "...                                                  ...     ...         ...\n",
+       "14240                  abnormal mammary gland physiology     103  MP:0001881\n",
+       "14241                 mammary gland alveolar hyperplasia       7  MP:0001884\n",
+       "14242        absent segment of posterior cerebral artery      25  MP:0013840\n",
+       "14243               increased retina hamartoma incidence       0  MP:0006183\n",
+       "14244                 decreased glomerular capsule space       2  MP:0011500\n",
+       "\n",
+       "[14245 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genes_per_trait"
    ]
   },
   {
@@ -340,10 +472,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "92ce8c62-cace-4a9a-95c5-a23224d1ba60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'seed_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#choose which community to check enrichment for\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#must be keys from coloc_dict\u001b[39;00m\n\u001b[1;32m      9\u001b[0m sub_community\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mseed_r\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 11\u001b[0m label_h,label_r,seed_h,seed_r,NPS_h,NPS_r,NPS\u001b[38;5;241m=\u001b[39mreturn_analysis_datasets(trait_r,cut_r,trait_h,cut_h,\u001b[43mseed_dict\u001b[49m,NPS_dict,interactome_name)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'seed_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#modify for correct genesets\n",
     "cut_r= 'FDR'\n",
@@ -371,6 +515,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce7316d6-e195-468e-9f18-062f600c7385",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tbl' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtbl\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tbl' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tbl"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 79,
    "id": "8add2122-75e5-4213-9a81-4aafd39b4e49",
    "metadata": {},
@@ -383,16 +549,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "id": "6bdbbaab-c52d-4191-ac78-7e59e72fcc49",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "path for this output file: validation_output/MGI_enr_seed_genes-loco_final_mega_FDR_PCNet2.0_enr.csv\n",
-      "this analysis has not been run- run_analysis set to True\n"
+     "ename": "NameError",
+     "evalue": "name 'sub_community' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#sub_community is the community being tested for enrichment (i.e. the ext-loco network, 'net')\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#whole_community is the greater pool of genes to test against (i.e. PCNET ('graph'))\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43msub_community\u001b[49m \u001b[38;5;129;01min\u001b[39;00m val_lab_dict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m      4\u001b[0m     whole_community\u001b[38;5;241m=\u001b[39mcoloc_dict_ref[sub_community]\n\u001b[1;32m      5\u001b[0m     outpath\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalidation_output/MGI_enr_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mval_lab_dict[sub_community]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_enr.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sub_community' is not defined"
      ]
     }
    ],
