--- a/ratxcan_locomotor.ipynb
+++ b/ratxcan_locomotor.ipynb
@@ -69,9 +69,7 @@
   {
    "cell_type": "markdown",
    "id": "bec339c6-d555-4ad3-a9f2-a8478500c36f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# python - format fam file"
    ]
@@ -89,14 +87,23 @@
    "execution_count": 1,
    "id": "5b1cc3eb-c3eb-4c71-83b2-d4968a9e99a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = input): <text>:1:8: unexpected symbol\n1: import pandas\n           ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = input): <text>:1:8: unexpected symbol\n1: import pandas\n           ^\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ce75bc84-1eb3-46d9-b277-20ef52767bce",
    "metadata": {},
    "outputs": [],
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e2ef5372-6994-414f-8db2-ffeed213e8d9",
    "metadata": {},
    "outputs": [],
