--- a/run_magma_human.ipynb
+++ b/run_magma_human.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "5516d93f-8171-4634-a9ff-11e8fafa0192",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,9 @@
   {
    "cell_type": "markdown",
    "id": "8682eeee-66cc-4c0d-8ae0-45feb228655d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# compare original to munged version"
    ]
@@ -875,7 +877,9 @@
   {
    "cell_type": "markdown",
    "id": "8bdb4be0-79d6-4afe-adb6-0a9bc54669ee",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# export MAGMA input files"
    ]
