update functions and notebooks

--- a/net_coloc_human_ctrl.ipynb
+++ b/net_coloc_human_ctrl.ipynb
@@ -124,7 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tissue_network=False\n",
     "tissue='global'"
    ]
   },
@@ -170,24 +169,15 @@
     }
    ],
    "source": [
-    "if tissue_network==False:\n",
-    "    interactome_name='PCNet2.2'\n",
-    "    interactome=import_interactome(UUIDs=UUIDs,interactome_name=interactome_name)\n",
-    "    all_nodes=list(interactome.nodes())\n",
-    "    # pre calculate the matricies used for network propagation\n",
-    "    print('\\ncalculating w_prime')\n",
-    "    w_prime = netprop.get_normalized_adjacency_matrix(interactome, conserve_heat=True)\n",
-    "    \n",
-    "    print('\\ncalculating w_double_prime')\n",
-    "    w_double_prime = netprop.get_individual_heats_matrix(w_prime, .5)\n",
-    "else:\n",
-    "    netdir='tissue_networks/intermediate/'\n",
-    "    interactome_name=f'hb_tissue_{tissue}_top'\n",
-    "    #import node list\n",
-    "    with open(f'{netdir}node_list_{tissue}_top.txt', 'r') as file:\n",
-    "        lines = file.readlines()\n",
-    "    # Remove newline characters from each line\n",
-    "    all_nodes=[line.strip() for line in lines]"
+    "interactome_name='PCNet2.2'\n",
+    "interactome=import_interactome(UUIDs=UUIDs,interactome_name=interactome_name)\n",
+    "all_nodes=list(interactome.nodes())\n",
+    "# pre calculate the matricies used for network propagation\n",
+    "print('\\ncalculating w_prime')\n",
+    "w_prime = netprop.get_normalized_adjacency_matrix(interactome, conserve_heat=True)\n",
+    "\n",
+    "print('\\ncalculating w_double_prime')\n",
+    "w_double_prime = netprop.get_individual_heats_matrix(w_prime, .5)"
    ]
   },
   {
@@ -200,108 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "de0b4669-5fc2-4938-8cf9-8b5ab6732dfd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "magma=True\n",
-    "rat_network=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "84a1d48a-2459-43cb-b3ac-3681a04e7f79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['loco_bonf', 'loco_top500', 'loco_FDR', 'loco_gsem_bonf', 'loco_gsem_top500', 'loco_gsem_FDR', 'ext_bonf', 'ext_top500', 'ext_FDR', 'ext_st22', 'loco_mega_fus_naac_bonf', 'loco_mega_fus_naac_top500', 'loco_mega_fus_naac_FDR', 'ext_fus_naac_bonf', 'ext_fus_naac_top500', 'ext_fus_naac_FDR', 'loco_final_cf_bonf', 'loco_final_cf_top500', 'loco_final_cf_FDR', 'loco_final_mega_bonf', 'loco_final_mega_top500', 'loco_final_mega_FDR', 'ext_rat_bonf', 'ext_rat_top500', 'ext_rat_FDR', 'loco_final_cf_rat_bonf', 'loco_final_cf_rat_top500', 'loco_final_cf_rat_FDR', 'ext_db_bonf', 'ext_db_top500', 'ext_db_FDR', 'ext_rtb_bonf', 'ext_rtb_top500', 'ext_rtb_FDR', 'loco_final_cf_25_bonf', 'loco_final_cf_25_top500', 'loco_final_cf_25_FDR', 'facial_hair_FDR', 'facial_hair_bonf', 'facial_hair_top500', 'age_smkinit_FDR', 'age_smkinit_bonf', 'age_smkinit_top500', 'antisoc_FDR', 'antisoc_bonf', 'antisoc_top500', 'hr_FDR', 'hr_bonf', 'hr_top500', 'infant_bw_FDR', 'infant_bw_bonf', 'infant_bw_top500', 'LDL_FDR', 'LDL_bonf', 'LDL_top500', 'maternal_smok_FDR', 'maternal_smok_bonf', 'maternal_smok_top500', 'age_menarche_FDR', 'age_menarche_bonf', 'age_menarche_top500', 'addict-rf_FDR', 'addict-rf_bonf', 'addict-rf_top500', 'adhd_FDR', 'adhd_bonf', 'adhd_top500', 'dpw_FDR', 'dpw_bonf', 'dpw_top500', 'risk_FDR', 'risk_bonf', 'risk_top500', 'auto_speed_FDR', 'auto_speed_bonf', 'auto_speed_top500', 'nsex_FDR', 'nsex_bonf', 'nsex_top500', 'bmi_FDR', 'bmi_bonf', 'bmi_top500', 'height_FDR', 'height_bonf', 'height_top500', 'anxiety_FDR', 'anxiety_bonf', 'anxiety_top500', 'panic_FDR', 'panic_bonf', 'panic_top500', 'asd_FDR', 'asd_bonf', 'asd_top500', 'adhd2022_FDR', 'adhd2022_bonf', 'adhd2022_top500', 'scz_FDR', 'scz_bonf', 'scz_top500', 'bipolar_FDR', 'bipolar_bonf', 'bipolar_top500', 'dep_FDR', 'dep_bonf', 'dep_top500', 'ptsd_FDR', 'ptsd_bonf', 'ptsd_top500', 'ocd_FDR', 'ocd_bonf', 'ocd_top500', 'alz_FDR', 'alz_bonf', 'alz_top500', 'park_FDR', 'park_bonf', 'park_top500', 'als_FDR', 'als_bonf', 'als_top500', 'epilepsy_FDR', 'epilepsy_bonf', 'epilepsy_top500', 'anorexia_FDR', 'anorexia_bonf', 'anorexia_top500', 'park2019_FDR', 'park2019_bonf', 'park2019_top500', 'bipolar_euro_FDR', 'bipolar_euro_bonf', 'bipolar_euro_top500', 'dep_euro_FDR', 'dep_euro_bonf', 'dep_euro_top500', 'ptsd_euro_FDR', 'ptsd_euro_bonf', 'ptsd_euro_top500', 'epilepsy_euro_FDR', 'epilepsy_euro_bonf', 'epilepsy_euro_top500', 'bmi_rn6_FDR', 'bmi_rn6_bonf', 'bmi_rn6_top500', 'body_length_rn6_FDR', 'body_length_rn6_bonf', 'body_length_rn6_top500'])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "if not tissue_network:\n",
-    "    seed_dict=import_seed_dict(mag_dir,file_dict,ctrl_traits,ctrl_traits_rat,psych_traits,bonf_dict,gene_col_dict,all_nodes)\n",
-    "else:\n",
-    "    hgnc=pd.read_csv('hgnc_complete_set.txt',sep='\\t',low_memory=False)\n",
-    "    hgnc=hgnc[['symbol','entrez_id']].dropna()\n",
-    "    hgnc['entrez_id']=hgnc['entrez_id'].astype(int).astype(str)\n",
-    "    seed_dict=import_seed_dict(mag_dir,file_dict,ctrl_traits,ctrl_traits_rat,bonf_dict,gene_col_dict,hgnc[hgnc.entrez_id.isin(all_nodes)]['symbol'])\n",
-    "seed_dict.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "beb3ddff-17d7-4d05-b490-afeeeaec3818",
-   "metadata": {},
    "outputs": [],
    "source": [
+    "seed_dict=import_seed_dict(mag_dir,file_dict,ctrl_traits,ctrl_traits_rat,psych_traits,bonf_dict,gene_col_dict,all_nodes)\n",
     "NPS_dict,NPS_dict_series=import_NPS_scores(seed_dict,interactome_name)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a261ed9c-69b5-44bb-95cc-3cb09ba577ca",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# choose datasets for analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "df0b1521-d9d8-4d59-9192-328e250ba846",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def return_analysis_datasets(trait_r,cut_r,trait_h,cut_h,seed_dict,NPS_dict,interactome_name):\n",
-    "    #labels\n",
-    "\tif not (trait_h==None):\n",
-    "\t    if cut_h==None:\n",
-    "\t        label_h=trait_h\n",
-    "\t    else:\n",
-    "\t        label_h=trait_h+'_'+cut_h\n",
-    "\t    seed_h=seed_dict[label_h]\n",
-    "\t    NPS_h=NPS_dict[label_h+'_'+interactome_name]\n",
-    "\telse:\n",
-    "\t\ttrait_h=None\n",
-    "\t\tlabel_h=None\n",
-    "\t\tcut_h=None\n",
-    "\t\tseed_h=None\n",
-    "\t\tNPS_h=None\n",
-    "\n",
-    "\tif not (trait_r==None):\n",
-    "\t    if cut_r==None:\n",
-    "\t        label_r=trait_r\n",
-    "\t    else:\n",
-    "\t        label_r=trait_r+'_'+cut_r\n",
-    "\t    seed_r=seed_dict[label_r]\n",
-    "\t    NPS_r=NPS_dict[label_r+'_'+interactome_name]\n",
-    "\n",
-    "\telse:\n",
-    "\t\ttrait_r=None\n",
-    "\t\tlabel_r=None\n",
-    "\t\tcut_r=None\n",
-    "\t\tseed_r=None\n",
-    "\t\tNPS_r=None\n",
-    "    #seed genes\n",
-    "    #NPS scores\n",
-    "\tif ((trait_h!=None) and (trait_r!=None)):\n",
-    "\t    NPS = NPS_h.join(NPS_r, lsuffix=\"h\", rsuffix=\"r\")\n",
-    "\t    NPS = NPS.assign(zhr=NPS.zh * NPS.zr)\n",
-    "\telse:\n",
-    "\t    NPS=None\n",
-    "\treturn label_h,label_r,seed_h,seed_r,NPS_h,NPS_r,NPS"
    ]
   },
   {
@@ -722,9 +625,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:env-std-py38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-env-std-py38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -736,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
